--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bleach==3.1.0
 certifi==2018.11.29
 chardet==3.0.4
 Django==1.11.20
-#django-bootstrap-datepicker-plus==3.0.5
+django-bootstrap-datepicker-plus==3.0.5
 django-contrib-comments==1.9.1
 django-forms-bootstrap==3.1.0
 django-widget-tweaks==1.4.3
